--- a/exam/main/templates/base.html
+++ b/exam/main/templates/base.html
@@ -1,10 +1,33 @@
-<!DOCTYPE html>
-<html lang="en">
+{% load static %}{% load bootstrap4 %}
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% bootstrap_css %}
+{% bootstrap_javascript jquery='slim' %}
+  <title>{% block title %} Главная {% endblock %}  </title>
 </head>
 <body>
+<div class="container-fluid">
+  <div class="d-flex flex-column flex-md-row p-3 px-md-4 mb-3  bg-white border-bottom box-shadow">
+      <h5 class="mr-md-auto p-2">"Главная"</h5>
+      {% if user.is_authenticated %}
 
+      <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Профиль</a>
+          <div class="dropdown-menu">
+              <a class="dropdown-item" href="{% url 'home'%} ">Главная</a>
+
+              <a class="dropdown-item" href="{% url 'logout'%}">Выйти</a>
+
+          </div>
+      </div>
+      {% else %}
+
+      <a class="p-2 text-dark" href="{% url 'login'%}">Вход</a>
+      {% endif %}  </div>
+
+{% block content%} {% endblock %}
+</div>
 </body>
 </html>
